src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_let_statement.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Block {
        stmts: [
            Let {
                name: "x",
                expr: Binary {
                    op: Add,
                    left: IntLiteral {
                        value: 1,
                        span: Span {
                            start: 9,
                            end: 10,
                            literal: "1",
                        },
                    },
                    right: IntLiteral {
                        value: 2,
                        span: Span {
                            start: 11,
                            end: 12,
                            literal: "2",
                        },
                    },
                    span: Span {
                        start: 9,
                        end: 12,
                        literal: "1+2",
                    },
                },
                span: Span {
                    start: 1,
                    end: 12,
                    literal: "let=x1+2",
                },
            },
            Expr {
                expr: Var {
                    name: "x",
                    span: Span {
                        start: 14,
                        end: 15,
                        literal: "x",
                    },
                },
                span: Span {
                    start: 14,
                    end: 15,
                    literal: "x",
                },
            },
        ],
        span: Span {
            start: 0,
            end: 16,
            literal: "{x}",
        },
    },
]
