src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_match_with_qualified_patterns.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: Match {
                        expr: Var {
                            name: "x",
                            span: Span {
                                start: 8,
                                end: 9,
                                literal: "x",
                            },
                        },
                        arms: [
                            MatchArm {
                                pattern: Variant {
                                    enum_name: Some(
                                        "Option",
                                    ),
                                    variant_name: "Some",
                                    binding: Some(
                                        "val",
                                    ),
                                    span: Span {
                                        start: 12,
                                        end: 29,
                                        literal: "",
                                    },
                                },
                                body: Var {
                                    name: "val",
                                    span: Span {
                                        start: 33,
                                        end: 36,
                                        literal: "val",
                                    },
                                },
                                span: Span {
                                    start: 12,
                                    end: 36,
                                    literal: "",
                                },
                            },
                            MatchArm {
                                pattern: Variant {
                                    enum_name: Some(
                                        "Option",
                                    ),
                                    variant_name: "None",
                                    binding: None,
                                    span: Span {
                                        start: 38,
                                        end: 50,
                                        literal: "",
                                    },
                                },
                                body: IntLiteral {
                                    value: 0,
                                    span: Span {
                                        start: 54,
                                        end: 55,
                                        literal: "0",
                                    },
                                },
                                span: Span {
                                    start: 38,
                                    end: 55,
                                    literal: "",
                                },
                            },
                        ],
                        span: Span {
                            start: 2,
                            end: 57,
                            literal: "",
                        },
                    },
                    span: Span {
                        start: 2,
                        end: 57,
                        literal: "",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 59,
                literal: "{}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 59,
        literal: "",
    },
}
