src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_match_with_unqualified_patterns.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: Match {
                        expr: Var {
                            name: "x",
                            span: Span {
                                start: 8,
                                end: 9,
                                literal: "x",
                            },
                        },
                        arms: [
                            MatchArm {
                                pattern: Variant {
                                    enum_name: None,
                                    variant_name: "Some",
                                    binding: Some(
                                        "val",
                                    ),
                                    span: Span {
                                        start: 12,
                                        end: 21,
                                        literal: "",
                                    },
                                },
                                body: Var {
                                    name: "val",
                                    span: Span {
                                        start: 25,
                                        end: 28,
                                        literal: "val",
                                    },
                                },
                                span: Span {
                                    start: 12,
                                    end: 28,
                                    literal: "",
                                },
                            },
                            MatchArm {
                                pattern: Variant {
                                    enum_name: None,
                                    variant_name: "None",
                                    binding: None,
                                    span: Span {
                                        start: 30,
                                        end: 34,
                                        literal: "",
                                    },
                                },
                                body: IntLiteral {
                                    value: 0,
                                    span: Span {
                                        start: 38,
                                        end: 39,
                                        literal: "0",
                                    },
                                },
                                span: Span {
                                    start: 30,
                                    end: 39,
                                    literal: "",
                                },
                            },
                        ],
                        span: Span {
                            start: 2,
                            end: 41,
                            literal: "",
                        },
                    },
                    span: Span {
                        start: 2,
                        end: 41,
                        literal: "",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 43,
                literal: "{}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 43,
        literal: "",
    },
}
