src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_match_without_bindings.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: Match {
                        expr: Var {
                            name: "x",
                            span: Span {
                                start: 8,
                                end: 9,
                                literal: "x",
                            },
                        },
                        arms: [
                            MatchArm {
                                pattern: Variant {
                                    enum_name: None,
                                    variant_name: "Some",
                                    binding: None,
                                    span: Span {
                                        start: 12,
                                        end: 16,
                                        literal: "",
                                    },
                                },
                                body: IntLiteral {
                                    value: 1,
                                    span: Span {
                                        start: 20,
                                        end: 21,
                                        literal: "1",
                                    },
                                },
                                span: Span {
                                    start: 12,
                                    end: 21,
                                    literal: "",
                                },
                            },
                            MatchArm {
                                pattern: Variant {
                                    enum_name: None,
                                    variant_name: "None",
                                    binding: None,
                                    span: Span {
                                        start: 23,
                                        end: 27,
                                        literal: "",
                                    },
                                },
                                body: IntLiteral {
                                    value: 0,
                                    span: Span {
                                        start: 31,
                                        end: 32,
                                        literal: "0",
                                    },
                                },
                                span: Span {
                                    start: 23,
                                    end: 32,
                                    literal: "",
                                },
                            },
                        ],
                        span: Span {
                            start: 2,
                            end: 34,
                            literal: "",
                        },
                    },
                    span: Span {
                        start: 2,
                        end: 34,
                        literal: "",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 36,
                literal: "{}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 36,
        literal: "",
    },
}
