src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_parentheses.snap
---
source: src/pagoda/parser.rs
assertion_line: 298
expression: program.expr
---
Binary {
    op: Mul,
    left: Unary {
        op: Minus,
        expr: Binary {
            op: Add,
            left: IntLiteral {
                value: 1,
                span: Span {
                    start: 2,
                    end: 3,
                    literal: "1",
                },
            },
            right: IntLiteral {
                value: 2,
                span: Span {
                    start: 4,
                    end: 5,
                    literal: "2",
                },
            },
            span: Span {
                start: 1,
                end: 6,
                literal: "(1+2)",
            },
        },
        span: Span {
            start: 0,
            end: 6,
            literal: "-(1+2)",
        },
    },
    right: IntLiteral {
        value: 3,
        span: Span {
            start: 7,
            end: 8,
            literal: "3",
        },
    },
    span: Span {
        start: 0,
        end: 8,
        literal: "-(1+2)*3",
    },
}
