src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_return_statement.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Expr {
        expr: IntLiteral {
            value: 1,
            span: Span {
                start: 0,
                end: 1,
                literal: "1",
            },
        },
        span: Span {
            start: 0,
            end: 1,
            literal: "1",
        },
    },
    Return {
        expr: IntLiteral {
            value: 2,
            span: Span {
                start: 10,
                end: 11,
                literal: "2",
            },
        },
        span: Span {
            start: 3,
            end: 11,
            literal: "return2",
        },
    },
    Expr {
        expr: IntLiteral {
            value: 3,
            span: Span {
                start: 13,
                end: 14,
                literal: "3",
            },
        },
        span: Span {
            start: 13,
            end: 14,
            literal: "3",
        },
    },
]
