src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_single_int_literal.snap
---
source: src/pagoda/parser.rs
expression: program
---
Program {
    imports: [],
    structs: [],
    enums: [],
    functions: [],
    stmts: [
        Block {
            stmts: [
                Expr {
                    expr: IntLiteral {
                        value: 123,
                        span: Span {
                            start: 1,
                            end: 4,
                            literal: "123",
                        },
                    },
                    span: Span {
                        start: 1,
                        end: 4,
                        literal: "123",
                    },
                },
            ],
            span: Span {
                start: 0,
                end: 5,
                literal: "{123}",
            },
        },
    ],
    span: Span {
        start: 0,
        end: 5,
        literal: "",
    },
}
