src/pagoda/snapshots/todaiji__pagoda__parser__tests__parses_statements.snap
---
source: src/pagoda/parser.rs
expression: program.stmts
---
[
    Expr {
        expr: IntLiteral {
            value: 1,
            span: Span {
                start: 0,
                end: 1,
                literal: "1",
            },
        },
        span: Span {
            start: 0,
            end: 1,
            literal: "1",
        },
    },
    Expr {
        expr: Binary {
            op: Add,
            left: IntLiteral {
                value: 2,
                span: Span {
                    start: 2,
                    end: 3,
                    literal: "2",
                },
            },
            right: IntLiteral {
                value: 3,
                span: Span {
                    start: 4,
                    end: 5,
                    literal: "3",
                },
            },
            span: Span {
                start: 2,
                end: 5,
                literal: "2+3",
            },
        },
        span: Span {
            start: 2,
            end: 5,
            literal: "2+3",
        },
    },
    Expr {
        expr: IntLiteral {
            value: 4,
            span: Span {
                start: 6,
                end: 7,
                literal: "4",
            },
        },
        span: Span {
            start: 6,
            end: 7,
            literal: "4",
        },
    },
]
